# rp-sidekick

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.rst  Dockerfile  README.rst  docker-compose.yml  manage.py  pyproject.toml  requirements-dev.txt  setup.cfg  setup.py
.github/workflows/: build.yaml  test.yaml
config/: celery.py  settings.py  testsettings.py  urls.py  wsgi.py
config/settings/: base.py  dev.py  production.py  test.py
docs/: Makefile  badges.rst  conf.py  google_auth.md  index.rst  make.bat  ways-of-working.md
docs/apps/: asos.rst  gpconnect.rst  randomisation.md  recruit.md  redcap.rst  sidekick.md  transferto.md
msisdn_utils/: apps.py  tests.py  urls.py  views.py
randomisation/: admin.py  apps.py  models.py  urls.py  utils.py  views.py
randomisation/migrations/: 0001_initial.py  0002_arm_weight.py
randomisation/tests/: test_utils.py  test_views.py  utils.py
rp_asos/: admin.py  apps.py  models.py  tasks.py  urls.py  views.py
rp_asos/migrations/: 0001_initial.py  0002_hospital_whatsapp_group_id.py  0003_screeningrecord.py  0004_add_tz_code_to_hospital.py  0005_add_is_active_to_hospital.py  0006_add_hospital_to_patientrecord.py  0007_add_total_eligible_to_screeningrecord.py  0008_remove_day_fields_from_screening_record.py  0008_update_screening_record_fields.py  0009_screening_record_date_nullable.py  0009_update_date_on_patient_record.py  0010_add_week_counts_to_screening_record.py
rp_asos/tests/: test_models.py  test_tasks.py  test_views.py
rp_checker/: apps.py  forms.py  urls.py  views.py
rp_checker/templates/: base.html
rp_checker/templates/rp_checker/: check_variables.html  check_webhooks.html
rp_dtone/: admin.py  apps.py  dtone_client.py  models.py  urls.py  utils.py  views.py
rp_dtone/migrations/: 0001_initial.py  0002_transaction.py
rp_dtone/tests/: test_dtone_client.py  test_models.py  test_utils.py  test_views.py  utils.py
rp_gpconnect/: admin.py  apps.py  forms.py  models.py  tasks.py  urls.py  views.py
rp_gpconnect/migrations/: 0001_initial.py  0002_contactimport_org.py  0003_flow.py  0004_auto_20190804_1637.py  0005_auto_20190919_0952.py
rp_gpconnect/templates/gpconnect/: contact_import_form.html
rp_gpconnect/tests/: test_model.py  test_task.py  test_view.py
rp_interceptors/: __init__.py  admin.py  apps.py  models.py  tasks.py  tests.py  urls.py  utils.py  views.py
rp_interceptors/migrations/: 0001_initial.py  0002_auto_20230411_1948.py
rp_lookup/: apps.py  forms.py  urls.py  views.py
rp_lookup/templates/rp_lookup/: index.html
rp_recruit/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
rp_recruit/migrations/: 0001_add_recruitment_model.py
rp_recruit/templates/: base.html
rp_recruit/templates/recruit/: signup.html  signup_success.html
rp_recruit/tests/: test_views.py  utils.py
rp_redcap/: admin.py  apps.py  models.py  tasks.py  urls.py  views.py
rp_redcap/migrations/: 0001_initial.py  0002_auto_20180813_1034.py  0003_auto_20180814_1144.py  0004_auto_20180815_0612.py  0005_project_org.py  0006_survey_ignore_fields.py  0007_surveyanswer.py  0008_survey_ignore_fields_blank.py  0009_project_reminder_limit.py  0010_survey_description.py  0011_contact_surname.py  0012_remove_project_reminder_limit.py  0013_remove_survey_check_fields.py  0014_hospital_patientrecord_patientvalue.py  0015_project_crf_token.py  0016_add_pre_and_post_op_fields.py  0017_split_patient_status_field.py  0018_alter_nomination_urn.py  0019_lead_and_nomination_name.py  0020_remove_asos_models.py
rp_redcap/tests/: base.py  test_tasks.py  test_views.py
rp_sidekick/: celery.py  settings.py  testsettings.py  urls.py  wsgi.py
rp_transferto/: admin.py  apps.py  models.py  tasks.py  urls.py  utils.py  views.py
rp_transferto/migrations/: 0001_add_msidn_information_cache.py  0002_add_latest_in_meta_for_msisdn_cache.py  0003_add_transferto_account.py  0004_add_topup_model.py  0005_alter_msisdninformation_data_and_more.py
rp_transferto/templates/rp_transferto/: topup_airtime_take_action_email.html
rp_transferto/tests/: constants.py  test_models.py  test_tasks.py  test_utils.py  test_views.py  utils.py
rp_yal/: apps.py  serializers.py  urls.py  utils.py  views.py
rp_yal/tests/: test_utils.py  test_views.py
seaworthy/: conftest.py  fixtures.py  test.py
sidekick/: admin.py  apps.py  auth_utils.py  constants.py  forms.py  models.py  serializers.py  tasks.py  urls.py  utils.py  views.py
sidekick/migrations/: 0001_create_organization.py  0002_organization_users.py  0003_add_engage_creds.py  0004_engage_url_urlfield.py  0004_increase_engage_token_size.py  0005_add_google_credentials.py  0005_add_org_point_of_contact.py  0006_add_consent_model.py  0007_add_consent_preview_fields.py  0008_label_turn_conversation_permission.py  0009_archive_turn_conversation_permission.py  0010_modify-consent-body.py  0011_organization_filter_rapidpro_fields.py  0012_alter_organization_filter_rapidpro_fields.py  0013_groupmonitor.py  0014_organization_contentrepo_token_and_more.py
sidekick/templates/: base.html
sidekick/templates/bootstrap4/: errors.html
sidekick/templates/sidekick/: consent.html  create_templates.html  get_templates.html
sidekick/tests/: test_forms.py  test_models.py  test_tasks.py  test_utils.py  test_views.py  utils.py
timezone_utils/: apps.py  tests.py  views.py
