[tool.poetry]
name = "rp-sidekick"
version = "1.11.7"
description = ""
authors = ["Praekelt Foundation <dev@praekeltfoundation.org>"]
repository = "http://github.com/praekeltfoundation/rp-sidekick"
license = "BSD"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
celery = "^5.2.3"
django = "^4.2.15"
django-environ = "^0.4.5"
django-extensions = "^3.1.5"
django-phonenumber-field = "^3.0.1"
django-prometheus = "^2.2.0"
djangorestframework = "^3.15.2"
json2html = "^1.3.0"
phonenumbers = "^8.13.45"
psycopg2-binary = "^2.9.9"
rapidpro-python = "2.6.1" #V2.7.0 removed the V1 API support, which we use
redis = "^4.5.4"
whitenoise = "^4.1.4"
raven = "^6.10.0"
hashids = "^1.3.1"
django-filter = "^2.4.0"
sentry-sdk = "^2.8.0"
dj-database-url = "^0.5.0"
jsonschema = "^4.21.1"
boto3 = "^1.35.35"


[tool.poetry.group.dev.dependencies]
ruff = "^0.6.9"
pytest-django = "^4.9.0"
pytest-cov = "^5.0.0"
responses = "^0.25.3"
freezegun = "^1.5.1"
recommonmark = "^0.7.1"
sphinx = "<8.0.0"
sphinx-rtd-theme = "^3.0.0"
moto = "^5.0.16"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
