[tool.poetry]
name = "rp-sidekick"
version = "1.11.7"
description = ""
authors = ["Praekelt Foundation <dev@praekeltfoundation.org>"]
repository = "http://github.com/praekeltfoundation/rp-sidekick"
license = "BSD"
readme = "README.rst"

packages = [
  { include = "config" },
  { include = "msisdn_utils" },
  { include = "randomisation" },
  { include = "rp_dtone"},
  { include = "rp_interceptors"},
  { include = "rp_recruit"},
  { include = "rp_transferto"},
  { include = "rp_yal"},
  { include = "sidekick" },
]

[tool.poetry.dependencies]
python = "^3.9"
celery = "^5.2.3"
django = "^4.2.15"
django-environ = "^0.4.5"
django-extensions = "^3.1.5"
django-phonenumber-field = "^3.0.1"
django-prometheus = "^2.2.0"
djangorestframework = "^3.15.2"
json2html = "^1.3.0"
phonenumbers = "^8.13.45"
psycopg2-binary = "^2.9.9"
rapidpro-python = "2.6.1" #V2.7.0 removed the V1 API support, which we use
redis = "^4.5.4"
whitenoise = "^4.1.4"
raven = "^6.10.0"
hashids = "^1.3.1"
django-filter = "^2.4.0"
sentry-sdk = "^2.8.0"
dj-database-url = "^0.5.0"
jsonschema = "^4.21.1"
boto3 = "^1.35.35"


[tool.poetry.group.dev.dependencies]
ruff = "^0.6.9"
pytest-django = "^4.9.0"
pytest-cov = "^5.0.0"
responses = "^0.25.3"
freezegun = "^1.5.1"
recommonmark = "^0.7.1"
sphinx = "<8.0.0"
sphinx-rtd-theme = "^3.0.0"
moto = "^5.0.16"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
extend-exclude = [
    "*/migrations/*.py",
    "docs/conf.py",

]

[tool.ruff.lint]
select = [
    "E", "F", "W", # pycodestyle + pyflakes == flake8 - mccabe
    "I",           # isort
    "UP",          # pyupgrade
    "S",           # flake8-bandit
    "B",           # flake8-bugbear
    "C4",          # flake8-comprehensions
    # "DJ",          # flake8-django
    "PIE",         # flake8-pie
    # "PT",          # flake8-pytest-style
    "SIM",         # flake8-simplify
    "PTH",         # flake8-use-pathlib
    # "RUF",         # ruff-specific rules
]

ignore = [
    "E501",  # TODO: Something about these long lines.
    "S113",  # TODO: Add request timeouts.
    "PTH118", # TODO: Switch to pathlib
]

[tool.ruff.lint.per-file-ignores]
"**/tests/**" = [
    "S101",  # It's okay to use `assert` in tests.
]

# TODO: Move this somewhere sensible?
"**/tests.py" = [
    "S101",  # It's okay to use `assert` in tests.
    "S106", # Its okay to use harcoded passwords in tests
]

"**/config/settings/{test,dev}.py" = [
    "S104",  # It's okay to bind to all interfaces in tests
    "F405", # Its okay to import * in settings
    "S105", # Its okay to have hardcoded secrets in test config
]
