[flake8]
exclude = */migrations/*.py,*/manage.py,ve/*
ignore = D100, D101, D102, D103, D104, D105, W503, E501, F405
line_length = 88

[tool:pytest]
python_files=test*.py
addopts = --verbose --ds=config.settings.test --ignore=ve

[metadata]
license_file = LICENCE

[isort]
line_length = 88
# Vertical hanging indent, for black
multi_line_output = 3
include_trailing_comma = True
skip = ve/
known_third_party = boto3,celery,dj_database_url,django,environ,freezegun,hashids,json2html,kombu,moto,phonenumber_field,pkg_resources,prometheus_client,pytest,raven,recommonmark,requests,responses,rest_framework,sentry_sdk,setuptools,six,temba_client
