[flake8]
exclude = */migrations/*.py,*/manage.py,ve/*,env/*
ignore = D100, D101, D102, D103, D104, D105, W503, E501, F405
line_length = 88

[tool:pytest]
python_files=test*.py
addopts = --verbose --ds=config.settings.test --ignore=ve

[metadata]
license_file = LICENCE

[isort]
line_length = 88
# Vertical hanging indent, for black
multi_line_output = 3
include_trailing_comma = True
skip = ve/,env/
known_third_party = celery,dj_database_url,django,environ,freezegun,hashids,json2html,jsonschema,kombu,phonenumber_field,phonenumbers,pkg_resources,prometheus_client,pytest,pytz,raven,recommonmark,redis,requests,responses,rest_framework,sentry_sdk,setuptools,six,temba_client
